# ChangeLog for www-apps/otrs
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-apps/otrs/ChangeLog,v 1.27 2007/01/02 22:44:54 rl03 Exp $

  02 Jan 2007; Renat Lumpau <rl03@gentoo.org> otrs-2.0.4.ebuild,
  otrs-2.1.4.ebuild:
  Drop mysql dep wrt bug 159781

*otrs-2.1.4 (20 Dec 2006)

  20 Dec 2006; Renat Lumpau <rl03@gentoo.org> -otrs-2.1.2.ebuild,
  -otrs-2.1.3.ebuild, +otrs-2.1.4.ebuild:
  Version bump

  23 Nov 2006; Francesco Riosa <vivo@gentoo.org> otrs-2.0.4.ebuild,
  otrs-2.1.2.ebuild, otrs-2.1.3.ebuild:
  dev-db/mysql => virtual/mysql

*otrs-2.1.3 (21 Nov 2006)

  21 Nov 2006; Renat Lumpau <rl03@gentoo.org> +otrs-2.1.3.ebuild:
  Version bump

*otrs-2.1.2 (27 Oct 2006)

  27 Oct 2006; Renat Lumpau <rl03@gentoo.org> +files/dbi_finish.patch,
  +otrs-2.1.2.ebuild:
  Version bump, bug #150863.

  20 Oct 2006; Renat Lumpau <rl03@gentoo.org> -files/postinstall-en.txt,
  -files/reconfig, -otrs-1.3.2.ebuild, -otrs-2.0.3.ebuild,
  otrs-2.0.4.ebuild:
  Need dev-perl/TimeDate, bug #151328.

  09 Sep 2006; Thomas Cort <tcort@gentoo.org> otrs-2.0.4.ebuild:
  Added ~amd64 wrt Bug #134899.

  13 Jul 2006; Renat Lumpau <rl03@gentoo.org> otrs-2.0.4.ebuild:
  Clarified w-c instructions

  13 Feb 2006; Michael Cummings <mcummings@gentoo.org> otrs-1.3.2.ebuild,
  otrs-2.0.3.ebuild, otrs-2.0.4.ebuild:
  Virtuals for some perl-core deps

  30 Dec 2005; <mcumming@gentoo.org> otrs-1.3.2.ebuild, otrs-2.0.3.ebuild,
  otrs-2.0.4.ebuild:
  Migrating libnet to perl-core

  04 Dec 2005; Renat Lumpau <rl03@gentoo.org> files/reconfig:
  Housekeeping

*otrs-2.0.4 (27 Nov 2005)

  27 Nov 2005; Renat Lumpau <rl03@gentoo.org> files/reconfig-2,
  files/postinstall-en-2.txt, files/reconfig, +otrs-2.0.4.ebuild:
  Version bump wrt bug #113447.

  20 Nov 2005; Stuart Herbert <stuart@gentoo.org> otrs-1.3.2.ebuild,
  otrs-2.0.3.ebuild:
  Fixed broken DEPEND

*otrs-2.0.3 (23 Oct 2005)
