@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/rt/rt-3.2.1.ebuild,v 1.10 2007/01/02 22:52:27 rl03 Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apps/rt/rt-3.2.1.ebuild,v 1.11 2007/01/10 21:36:03 phreak Exp $
 
 inherit webapp eutils
 
@@ -61,7 +61,7 @@ RDEPEND="
 	virtual/mta
 	mysql? ( >=dev-perl/DBD-mysql-2.0416 )
 	postgres? ( dev-perl/DBD-Pg )
-	fastcgi? ( dev-perl/FCGI net-www/mod_fastcgi )
+	fastcgi? ( dev-perl/FCGI )
 	!fastcgi? ( =www-apache/libapreq-1* )
 	=net-www/apache-1*
 "
