@@ -1,6 +1,11 @@
 # ChangeLog for www-apps/rt
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/rt/ChangeLog,v 1.47 2007/01/02 22:52:27 rl03 Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apps/rt/ChangeLog,v 1.48 2007/01/10 21:36:03 phreak Exp $
+
+  10 Jan 2007; Christian Heim <phreak@gentoo.org> rt-3.2.1.ebuild,
+  rt-3.4.5.ebuild, rt-3.6.3.ebuild:
+  Dropping net-www/mod_fastcgi from RDEPEND (net-www/mod_fastcgi is
+  pending removal).
 
   02 Jan 2007; Renat Lumpau <rl03@gentoo.org> rt-3.2.1.ebuild,
   rt-3.4.5.ebuild, rt-3.6.3.ebuild:
