@@ -1,6 +1,11 @@
 # ChangeLog for www-apps/otrs
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/otrs/ChangeLog,v 1.27 2007/01/02 22:44:54 rl03 Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apps/otrs/ChangeLog,v 1.28 2007/01/10 21:38:45 phreak Exp $
+
+  10 Jan 2007; Christian Heim <phreak@gentoo.org> otrs-2.0.4.ebuild,
+  otrs-2.1.4.ebuild:
+  Dropping net-www/mod_fastcgi from the RDEPEND (net-www/mod_fastcgi is
+  pending removal).
 
   02 Jan 2007; Renat Lumpau <rl03@gentoo.org> otrs-2.0.4.ebuild,
   otrs-2.1.4.ebuild:
